--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <!--the main body-->
-  <div class="flex flex-col w-full justify-center items-center">
+  <div class="flex flex-col w-full justify-center items-center ">
 
     <!-- head -->
     <div class="flex justify-center w-full">
@@ -541,15 +541,13 @@
     </div>
 
     <!-- con-4 -->
-    <div class="flex justify-between -my-40 w-full itmes-center flex-row box-border">
-        <div class="flex justify-start   ">
-            <img class="" src="img/ball-left.png" alt="">
+    <div class="flex justify-between  h-100  w-full itmes-center flex-row box-border">
+        <div class=" flex justify-start itmes-center bg-center w-70 bg-cover bg-no-repeat  bg-[url(/img/ball-left.png)]  ">
         </div>
         <div class=" flex flex-row justify-center w-300 items-center">
             <img  class="    " src="img/Frame 141.png" alt="">
         </div>
-        <div class="flex justify-end   ">
-            <img class="" src="img/ball-right.png"  alt="">
+        <div class="flex justify-start itmes-center- bg-center w-70 bg-cover bg-no-repeat  bg-[url(/img/ball-right.png)]   ">
         </div>
 
 
@@ -1101,6 +1099,78 @@
 
 
     </div>
+
+    <!-- con-6 -->
+
+    <div class="flex flex-row w-full justify-center  items-center  ">
+
+      <div class="flex flex-col justify-center h-full w-170 ">
+        <h1 class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-start pt-5">
+          DO YOU NEED HELP <span class="text-red-700">?</span> 
+        </h1>
+        <p class="text-white pt-2 text-xs opacity-40 justify-end   ">Our team is here to support you. Get expert advice, quick answers, and the <br>guidance you need to stay secure online. </p>
+        <div class="pt-10">      
+          <a href="#">
+            <div class="button-wrapper ">
+                <button class="demo">Try Demo</button>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class=" pl-30">
+        <img class="w-100" src="img/Rectangle 498.png" alt="">
+      </div>
+
+      
+
+    </div>
+
+
+
+      <!-- footer -->
+
+     <div class="flex flex-col h-100  w-full justify-center  items-center  ">
+
+      <!-- upper footer -->
+      <div class="flex flex-row justify-between items-center w-300 py-20">
+
+        <!-- up-1-footer -->
+        <div class=" w-80 h-80 -m-50 z-40 bg-[url(/img/footer-logo.png)] bg-cover ">
+        </div>
+
+        <!-- up-2-footer -->
+        <div class="flex flex-col gap-2">
+          <h3 class="text-white text-l font-semibold">Explore</h3>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">About Us</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Our Services</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Parterns</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Careers</h3></a>
+        </div>
+
+        <!-- up-3-footer -->
+        <div class="flex flex-col gap-2">
+          <h3 class="text-white text-l font-semibold">Resources</h3>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Blog / Latest News</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Cybersecurity Guides</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Webinars & Events</h3></a>
+          <a href="#"><h3 class="text-white text-l font-light opacity-70">Security Policy</h3></a>
+        </div>
+
+        <!-- up-4-footer -->
+         <div>
+
+          <h3 class="text-white text-l font-semibold">Resources</h3>
+         </div>
+
+      </div>
+
+      <!-- lower footer -->
+      <div>
+
+      </div>
+
+     </div>
 
 
 
