--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
       <div class="flex flex-row justify-between items-center w-300 py-20">
 
         <!-- up-1-footer -->
-        <div class=" w-80 h-80 -m-50 z-40 bg-[url(/img/footer-logo.png)] bg-cover ">
+        <div class=" w-80 h-80 -my-50  z-40 bg-[url(/img/footer-logo.png)] bg-cover ">
         </div>
 
         <!-- up-2-footer -->
@@ -1158,10 +1158,26 @@
         </div>
 
         <!-- up-4-footer -->
-         <div>
+         <div class="flex flex-col gap-4">
 
-          <h3 class="text-white text-l font-semibold">Resources</h3>
-         </div>
+          <h3 class="text-white text-l font-semibold">Join to Cyber-Agency</h3>
+          <div class="flex gap-2 flex-row itmes-center ">
+              <input class=" bg-zinc-900 py-2 px-3 text-white" type="email" placeholder="Enter your Email"> 
+              <button class="bg-red-900 rounded-xl px-4 py-2 text-white">Submit</button>
+          </div>
+          <div className="flex gap-4 text-white p-8 bg-gray-300  items-center justify-center">
+              <input 
+              type="email" 
+              placeholder="Enter your Email"
+              className="w-[353px] h-[51px] shrink-0 rounded-[10px] bg-white/8 text-white/63 px-4 placeholder:text-white/63 outline-none focus:ring-2 focus:ring-white/20 transition-all" 
+               />
+            
+              <button
+              className="inline-flex px-[30px] py-5 justify-center items-center gap-[10px] rounded-[10px] text-white transition-all hover:opacity-90 active:scale-95">
+              Submit
+            </button>
+          </div>
+        </div>
 
       </div>
 
