--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               </p>
             </div>
 
-            <img class="-mt-35" src="img/Frame 47429.png" alt="" />
+            <img class="-mt-35" src="img/Frame 47430.png" alt="" />
           </div>
         </div>
 
@@ -433,7 +433,7 @@
               </p>
             </div>
 
-            <img class="-mt-35" src="img/Frame 47429.png" alt="" />
+            <img class="-mt-35" src="img/Frame 47431.png" alt="" />
           </div>
         </div>
       </div>
@@ -1143,19 +1143,19 @@
         <!-- up-2-footer -->
         <div class="flex flex-col gap-2">
           <h3 class="text-white text-l font-semibold">Explore</h3>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">About Us</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Our Services</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Parterns</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Careers</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">About Us</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Our Services</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Parterns</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Careers</h3></a>
         </div>
 
         <!-- up-3-footer -->
         <div class="flex flex-col gap-2">
           <h3 class="text-white text-l font-semibold">Resources</h3>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Blog / Latest News</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Cybersecurity Guides</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Webinars & Events</h3></a>
-          <a href="#"><h3 class="text-white text-l font-light opacity-70">Security Policy</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Blog / Latest News</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Cybersecurity Guides</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Webinars & Events</h3></a>
+          <a href="#"><h3 class="text-white text-l hover:opacity-100 font-light opacity-70">Security Policy</h3></a>
         </div>
 
         <!-- up-4-footer -->
@@ -1205,7 +1205,28 @@
       </div>
 
       <!-- lower footer -->
-      <div>
+      <div class="flex flex-col gap-3 z-40 w-300 pb-20">
+        <div class="flex w-full  h-0.5 bg-white opacity-30"></div>
+        <div class="flex flex-row py-5 justify-between ">
+          <h2 class="text-gray-500 text-xs">© 2026 <span class="text-white opacity-70">Cyber Agency</span>  | Design & Developed by <span class="text-white opacity-70">Rami Al-Sa’afani.</span> All Rights Reserved.</h2>
+          <div class="flex flex-row gap-3 justify-center items-center">
+            <h2 class="text-white opacity-70 text-xs">Cybersecurity</h2>
+           <svg 
+              width="6" height="5" viewBox="0 0 6 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.640137" width="5" height="5" rx="2.5" fill="#ACACAC"/>
+                </svg>
+
+            <h2 class="text-white opacity-70 text-xs">Technologies</h2>
+           <svg 
+              width="6" height="5" viewBox="0 0 6 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.640137" width="5" height="5" rx="2.5" fill="#ACACAC"/>
+              </svg>
+
+               <h2 class="text-white opacity-70 text-xs">Empower</h2>
+
+ 
+          </div>
+        </div>
 
       </div>
 
